# raytracer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
benches/: raytracer_bench.rs
src/: camera.rs  colour.rs  environment.rs  geometry.rs  intersection.rs  lib.rs  light.rs  materials.rs  matrix.rs  patterns.rs  projectile.rs  ray.rs  render_context.rs  scene.rs  shape.rs  shape_registry.rs  simulation.rs  sphere.rs  sphere_registry.rs  transformations.rs  tuple.rs  world.rs
src/pattern/: checkered.rs  gradient.rs  mod.rs  pattern.rs  ring.rs  striped.rs
src/shape/: mod.rs  plane.rs  shape.rs  sphere.rs
www/: index.html  raytracer-worker.js  simple.html
