[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
image = "0.25"

# Add profiling and optimization configurations
[profile.release]
debug = false 
lto = true    # Link-time optimization
codegen-units = 1  # Better optimization
panic = "abort"    # Smaller binary size
incremental = true

[profile.bench]
debug = false
incremental = true

[[bench]]
name = "raytracer_bench"
harness = false

[[bin]]
name = "raytracer-cli"
path = "src/bin/main.rs"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.image]
version = "0.25"